--- a/posts/templates/create.html
+++ b/posts/templates/create.html
@@ -1,5 +1,11 @@
-<form method = 'POST'>
-    {% csrf_token %}
-    {{form}}
-    <button class="btn btn-primary" type="submit">Submit</button>
-</form>
+{%extends 'base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block 'body-content'%}
+    <form  class= "container" method = 'POST'>
+        {% csrf_token %}
+        {{form|crispy}}
+
+        <button class="btn btn-primary" type="submit">Submit</button>
+    </form>
+{%endblock 'body-content' %}
