--- a/posts/templates/includes/carousel.html
+++ b/posts/templates/includes/carousel.html
@@ -36,7 +36,7 @@
         <div class="carousel-item">
           <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-6">
-              <img src="{%static 'image/post.jpg'%}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
+              <img src="{%static 'image/post7.jpg'%}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
             </div>
             <div class="col-lg-8 col-md-8 col-sm-10 mb-3">
               <h4>title</h4>
