--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-6 col-sm-8 my-2">
         <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="/{%static 'image/post1.jpg'%}" alt="Card image">
+          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post-1.jpg'%}" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">title</h4>
             <p><b>Category</b><span class="text-muted">Date nodified</span></p>
@@ -36,7 +36,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-8 my-2">
         <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="/{%static 'image/post2.jpg'%}" alt="Card image">
+          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post2.jpg'%}" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">title</h4>
             <p><b>Category</b><span class="text-muted">Date nodified</span></p>
@@ -55,7 +55,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-8 my-2">
         <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="/{%static 'image/post3.jpg'%}" alt="Card image">
+          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post3.jpg'%}" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">title</h4>
             <p><b>Category</b><span class="text-muted">Date nodified</span></p>
@@ -74,7 +74,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-8 my-2">
         <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="/{%static 'image/post4.jpg'%}" alt="Card image">
+          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post4.jpg'%}" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">title</h4>
             <p><b>Category</b><span class="text-muted">Date nodified</span></p>
@@ -93,7 +93,7 @@
       </div>
       <div class="col-lg-4 col-md-6 col-sm-8 my-2">
         <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="/{%static 'image/post.jpg'%}" alt="Card image">
+          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post7.jpg'%}" alt="Card image">
           <div class="card-body">
             <h4 class="card-title">title</h4>
             <p><b>Category</b><span class="text-muted">Date nodified</span></p>
@@ -121,7 +121,7 @@
         <h2 class="p-1 pb-3">Category 1</h2> 
         <div class="row ml-1">
           <div class="col-lg-4 col-md-4 col-sm-6">
-            <img src="{%static 'image/post1.jpg'%}" style="height: 125px;" alt="" class="img-fluid rounded-lg">
+            <img src="{%static 'image/post-1.jpg'%}" style="height: 125px;" alt="" class="img-fluid rounded-lg">
           </div>
           <div class="col-lg-8 col-md-8 col-sm-10 mb-3">
             <h4>title</h4>
@@ -183,7 +183,7 @@
         <h2 class="p-1 pb-3">Category 2</h2> 
         <div class="row ml-1">
           <div class="col-lg-4 col-md-4 col-sm-6">
-            <img src="{%static 'image/post.jpg'%}" style="height: 125px;" alt="" class="img-fluid rounded-lg">
+            <img src="{%static 'image/post7.jpg'%}" style="height: 125px;" alt="" class="img-fluid rounded-lg">
           </div>
           <div class="col-lg-8 col-md-8 col-sm-10 mb-3">
             <h4>title</h4>
