added update button

--- a/posts/templates/post.html
+++ b/posts/templates/post.html
@@ -14,6 +14,13 @@
             <i>Author designation</i>
             <i>{{post.author.date_joined}}</i>
         </h4>
+        {% if post.author == user %}
+            <div class ="d-flex justify-content-center">
+                <a href ="{%url 'update' post.slug %}" class="btn
+                btn-outline-info mx-1">Update</a>
+               
+            </div>
+        {% endif %}
     </div>
     
     <!-- Post info -->
