--- a/posts/templates/includes/navbar.html
+++ b/posts/templates/includes/navbar.html
@@ -4,10 +4,10 @@
       <nav class="nav navbar-expand-sm navbar-light justify-content-between">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Dashboard</a>
+            <a class="nav-link active" href="{% url 'posts' %}">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="my-posts.html">My Posts</a>
+            <a class="nav-link" href="{% url 'my_posts' %}">My Posts</a>
           </li>
       
           <!-- Dropdown -->
