can upload image through create page and view it

--- a/posts/templates/create.html
+++ b/posts/templates/create.html
@@ -2,7 +2,8 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block 'body-content'%}
-    <form  class= "container" method = 'POST'>
+    <form  class= "container" method = 'POST' enctype="multipart/form-data"> 
+        #enctype because without this files will not be visible
         {% csrf_token %}
         {{form|crispy}}
 
