--- a/posts/templates/my_posts.html
+++ b/posts/templates/my_posts.html
@@ -8,7 +8,7 @@
     <div class="mb-3">
       <article class="row media border rounded shadow p-3 my-2 bg-white">
         <div class="col-lg-4 col-md-4 col-sm-6">
-          <img src="{% static 'image/post7.jpg' %}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
+          <img src="{{ post.cover_pic.url }}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
         </div>
         <div class="col-lg-8 col-md-8 col-sm-10">
           <div class="d-flex">
