--- a/posts/templates/post.html
+++ b/posts/templates/post.html
@@ -31,7 +31,8 @@
     <div>
         <h1 class="text-center">{{post.title}}</h1>
         <div class="d-flex justify-content-center">
-            <img class="img-fluid rounded-lg shadow" style="height:70vh" src="{%static 'image/post3.jpg'%}" alt="">
+            <img class="img-fluid rounded-lg shadow" style="height:70vh" 
+            src="{{ post.cover_pic.url }}" alt="">
         </div>
         <div>
             {{post.content}}
