--- a/posts/templates/post.html
+++ b/posts/templates/post.html
@@ -35,7 +35,7 @@
             src="{{ post.cover_pic.url }}" alt="">
         </div>
         <div>
-            {{post.content}}
+            {{post.content|safe}}
         </div>
     </div>
 
