changed dashboard and latest and trending posts

--- a/posts/templates/includes/carousel.html
+++ b/posts/templates/includes/carousel.html
@@ -12,13 +12,18 @@
         <li data-target="#trendingPosts" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner" style="height: 350px;">
-        <div class="carousel-item active">
+        {% for post in trending_posts %}
+          {% if forloop.counter == 1 %}
+            <div class="carousel-item active">
+          {% else %}
+            <div class="carousel-item">
+          {% endif %}
           <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-6">
-              <img src="{%static 'image/post6.jpg'%}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
+              <img src="{{post.cover_pic.url}}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
             </div>
             <div class="col-lg-8 col-md-8 col-sm-10 mb-3">
-              <h4>title</h4>
+              <h4>{{post.title}}</h4>
               <p><b>Category</b><span class="text-muted">Date nodified</span></p>
               <p>lorem-50</p>
               <div class="d-flex">
@@ -33,48 +38,9 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-6">
-              <img src="{%static 'image/post7.jpg'%}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
-            </div>
-            <div class="col-lg-8 col-md-8 col-sm-10 mb-3">
-              <h4>title</h4>
-              <p><b>Category</b><span class="text-muted">Date nodified</span></p>
-              <p>lorem-50</p>
-              <div class="d-flex">
-                <div>
-                  <img src="{%static 'image/author.jpg'%}" alt="" class="img-fluid rounded-circle" style="height: 7vh;">
-                </div>
-                <div class="ml-2">
-                  <h3>Author name</h3>
-                  <p>Designation</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-6">
-              <img src="{%static 'image/post3.jpg'%}" style="height: 300px;" alt="" class="img-fluid rounded-lg">
-            </div>
-            <div class="col-lg-8 col-md-8 col-sm-10 mb-3">
-              <h4>title</h4>
-              <p><b>Category</b><span class="text-muted">Date nodified</span></p>
-              <p>lorem-50</p>
-              <div class="d-flex">
-                <div>
-                  <img src="{%static 'image/author.jpg'%}" alt="" class="img-fluid rounded-circle" style="height: 7vh;">
-                </div>
-                <div class="ml-2">
-                  <h3>Author name</h3>
-                  <p>Designation</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
+        {% endfor %}
+       
       </div>
     </div>
   </div>
