--- a/posts/templates/includes/pagination.html
+++ b/posts/templates/includes/pagination.html
@@ -4,7 +4,8 @@
         <ul class="pagination justify-content-center">
         {% if page_obj.has_previous %}
           <li class="page-item mx-1">
-            <a class="page-link rounded-circle" href="?page={{ page_obj.previous_page_number }}" tabindex="-1">
+            <a class="page-link rounded-circle" href="?page={{ page_obj.previous_page_number }}&search={{ search }}" tabindex="-1"> 
+                <!--  &search={{ search }} -> //to carry the search on next page -->
               <i class="fas fa-arrow-left"></i>
             </a>
           </li>
@@ -17,12 +18,12 @@
         {% endif %}
         {% for page in page_obj.paginator.page_range %}
           <li class="page-item mx-1">
-            <a class="page-link rounded-circle" href="?page={{ page }}">{{ page }}</a>
+            <a class="page-link rounded-circle" href="?page={{ page }}&search={{ search }}">{{ page }}</a>
           </li>
         {% endfor %}
           {% if page_obj.has_next %}
             <li class="page-item mx-1">
-                <a class="page-link rounded-circle" href="?page={{ page_obj.next_page_number }}">
+                <a class="page-link rounded-circle" href="?page={{ page_obj.next_page_number }}&search={{ search }}">
                 <i class="fas fa-arrow-right"></i>
                 </a>
             </li>
