--- a/posts/templates/index.html
+++ b/posts/templates/index.html
@@ -16,7 +16,7 @@
     {% for post in latest_posts %}
         <div class="col-lg-4 col-md-6 col-sm-8 my-2">
           <div class="card border border-0">
-            <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post-1.jpg'%}" alt="Card image">
+            <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{{post.cover_pic.url}}" alt="Card image">
             <div class="card-body">
               <h4 class="card-title">title</h4>
               <p><b>Category</b><span class="text-muted">Date nodified</span></p>
@@ -34,85 +34,7 @@
           </div>
         </div>
     {% endfor %}
-      <div class="col-lg-4 col-md-6 col-sm-8 my-2">
-        <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post2.jpg'%}" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">title</h4>
-            <p><b>Category</b><span class="text-muted">Date nodified</span></p>
-            <p class="card-text">Some example text.</p>
-            <div class="d-flex">
-              <div>
-                <img src="{%static 'image/author.jpg'%}" alt="" class="img-fluid rounded-circle" style="height: 7vh;">
-              </div>
-              <div class="ml-2">
-                <h3>Author name</h3>
-                <p>Designation</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 col-sm-8 my-2">
-        <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post3.jpg'%}" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">title</h4>
-            <p><b>Category</b><span class="text-muted">Date nodified</span></p>
-            <p class="card-text">Some example text.</p>
-            <div class="d-flex">
-              <div>
-                <img src="{%static 'image/author.jpg'%}" alt="" class="img-fluid rounded-circle" style="height: 7vh;">
-              </div>
-              <div class="ml-2">
-                <h3>Author name</h3>
-                <p>Designation</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 col-sm-8 my-2">
-        <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post4.jpg'%}" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">title</h4>
-            <p><b>Category</b><span class="text-muted">Date nodified</span></p>
-            <p class="card-text">Some example text.</p>
-            <div class="d-flex">
-              <div>
-                <img src="{%static 'image/author.jpg'%}" alt="" class="img-fluid rounded-circle" style="height: 7vh;">
-              </div>
-              <div class="ml-2">
-                <h3>Author name</h3>
-                <p>Designation</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6 col-sm-8 my-2">
-        <div class="card border border-0">
-          <img class="card-img-top rounded-lg shadow-sm" style="height:250px" src="{%static 'image/post7.jpg'%}" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">title</h4>
-            <p><b>Category</b><span class="text-muted">Date nodified</span></p>
-            <p class="card-text">Some example text.</p>
-            <div class="d-flex">
-              <div>
-                <img src="{%static 'image/author.jpg'%}" alt="" class="img-fluid rounded-circle" style="height: 7vh;">
-              </div>
-              <div class="ml-2">
-                <h3>Author name</h3>
-                <p>Designation</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      
-    </div>
-  </div>
+ 
 
   <!-- Top Categories -->
   <div class="container mt-3">
