added login logout on navbar

--- a/posts/templates/includes/navbar.html
+++ b/posts/templates/includes/navbar.html
@@ -9,6 +9,16 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'my_posts' %}">My Posts</a>
           </li>
+
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Log in</a>
+            </li>
+          {% endif %}
       
           <!-- Dropdown -->
           <li class="nav-item dropdown">
