--- a/posts/templates/includes/navbar.html
+++ b/posts/templates/includes/navbar.html
@@ -4,19 +4,28 @@
       <nav class="nav navbar-expand-sm navbar-light justify-content-between">
         <ul class="navbar-nav">
           <li class="nav-item">
+            {% if tab == 'dashboard' %}
             <a class="nav-link active" href="{% url 'posts' %}">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'my_posts' %}">My Posts</a>
+            {% else %}
+            <a class="nav-link" href="{% url 'posts' %}">Dashboard</a>
+            {% endif %}
           </li>
 
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+              {% if tab == 'my_posts' %}
+              <a class="nav-link active" href="{% url 'my_posts' %}">My Posts</a>
+              {% else %}
+              <a class="nav-link" href="{% url 'my_posts' %}">My Posts</a>
+              {% endif %}
             </li>
-          {% else %}
+
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Log in</a>
+              {% if tab == 'create' %}
+              <a class="nav-link active" href="{% url 'create' %}">Create Post</a>
+              {% else %}
+              <a class="nav-link" href="{% url 'create' %}">Create Post</a>
+              {% endif %}
             </li>
           {% endif %}
       
@@ -31,6 +40,15 @@
               <a class="dropdown-item" href="#">Link 3</a>
             </div>
           </li>
+          {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Log in</a>
+            </li>
+          {% endif %}
         </ul>
         <div class="d-flex align-items-center">
           <a class="navbar-brand" href="{% url 'posts' %}">Blog Project</a>
