--- a/posts/templates/includes/navbar.html
+++ b/posts/templates/includes/navbar.html
@@ -1,3 +1,4 @@
+{% load helper_tags %}
 <!-- NAVBAR -->
 <div class="pb-3 pt-3 border-bottom">
     <div class="container">
@@ -21,11 +22,7 @@
             </li>
 
             <li class="nav-item">
-              {% if tab == 'create' %}
-              <a class="nav-link active" href="{% url 'create' %}">Create Post</a>
-              {% else %}
-              <a class="nav-link" href="{% url 'create' %}">Create Post</a>
-              {% endif %}
+              <a class="nav-link {{ tab|active:'create' }}" href="{% url 'create' %}">Create Post</a>
             </li>
           {% endif %}
       
