--- a/posts/templates/includes/navbar.html
+++ b/posts/templates/includes/navbar.html
@@ -21,8 +21,20 @@
               {% endif %}
             </li>
 
+            <li class="nav-item"></li>
+              {% if tab == 'my_categories' %}
+              <a class="nav-link active" href="{% url 'my_categories' %}">My Categories</a>
+              {% else %}
+              <a class="nav-link" href="{% url 'my_categories' %}">My Categories</a>
+              {% endif %}
+          </li>
+
             <li class="nav-item">
               <a class="nav-link {{ tab|active:'create' }}" href="{% url 'create' %}">Create Post</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link {{ tab|active:'create' }}" href="{% url 'createcategory' %}">Create Category</a>
             </li>
           {% endif %}
       
